Fixes #5399 by reverting the `overflow` of Firestore CardActionBar (#908)
The regression was introduced in #888.

This reverts a minor cosmetic issue where the icons are able to extend
past their sides... but it happens less often with the media-queries
scaling things down.

--- a/src/components/common/CardActionBar.scss
+++ b/src/components/common/CardActionBar.scss
@@ -25,7 +25,7 @@
     box-shadow: $GMP_SHADOW_DIVIDER_BOTTOM_INSET;
     display: flex;
     height: 56px;
-    overflow: hidden;
+    overflow: visible;
   }
 
   .CardActionBar-actions {
